fix: wrap greeting text on narrow screen

--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,11 @@
 
   .typewriter {
     display: inline-block;
+  }
+}
+
+@media (min-width: 560px) {
+  .typewriter {
     white-space: nowrap;
   }
 }
